--- a/assets/lang/tr.json
+++ b/assets/lang/tr.json
@@ -1,3 +1,29 @@
 {
-    "home":"ana sayfa"
+    "Settings": "Ayarlar",
+    "Library": "Kütüphane",
+    "Playlists": "Çalma Listeleri",
+    "No Music Yet. Add Music by Pressing the Add Music Button": "Henüz müzik yok. Müzik eklemek için Müzik Ekle butonuna basın",
+    "Add Music": "Müzik Ekle",
+    "Add to Playlist": "Çalma Listesine Ekle",
+    "Share": "Paylaş",
+    "Delete": "Sil",
+    "Are you sure you want to delete this music file?": "Bu müzik dosyasını silmek istediğinizden emin misiniz?",
+    "No": "Hayır",
+    "Yes": "Evet",
+    "No Playlists Yet. Add Playlists by Pressing the Add Playlists Button": "Henüz çalma listesi yok. Çalma listesi eklemek için Çalma Listesi Ekle butonuna basın",
+    "Add Playlists": "Çalma Listesi Ekle",
+    "Delete Playlist": "Çalma Listesini Sil",
+    "Are you sure you want to delete this playlist?": "Bu çalma listesini silmek istediğinizden emin misiniz?",
+    "Cancel": "İptal",
+    "Upgrade to Premium": "Premium’a Yükselt",
+    "Join us to benefit from privileges": "Ayrıcalıklardan yararlanmak için bize katılın",
+    "Terms Of Use": "Kullanım Şartları",
+    "Privacy Policy": "Gizlilik Politikası",
+    "Rate Us": "Bizi Değerlendir",
+    "Playlist Detail": "Çalma Listesi Detayı",
+    "Add Music to Playlist": "Çalma Listesine Müzik Ekle",
+    "Delete Music File": "Müzik Dosyasını Sil",
+    "Songs": "Şarkılar",
+    "Select": "Seç",
+    "Music added to playlist": "Müzik çalma listesine eklendi"
 }
