--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -1,3 +1,30 @@
 {
-    "home":"home"
+    "Settings":"Settings",
+    "Library":"Library",
+    "Playlists":"Playlists",
+    "No Music Yet. Add Music by Pressing the Add Music Button":"No Music Yet. Add Music by Pressing the Add Music Button",
+    "Add Music":"Add Music",
+    "Add to Playlist":"Add to Playlist",
+    "Share":"Share",
+    "Delete":"Delete",
+    "Are you sure you want to delete this music file?":"Are you sure you want to delete this music file?",
+    "No":"No",
+    "Yes":"Yes",
+    "No Playlists Yet. Add Playlists by Pressing the Add Playlists Button":"No Playlists Yet. Add Playlists by Pressing the Add Playlists Button",
+    "Add Playlists":"Add Playlists",
+    "Delete Playlist":"Delete Playlist",
+    "Are you sure you want to delete this playlist?":"Are you sure you want to delete this playlist?",
+    "Cancel":"Cancel",
+    "Upgrade to Premium":"Upgrade to Premium",
+    "Join us to benefit from privileges":"Join us to benefit from privileges",
+    "Terms Of Use":"Terms Of Use",
+    "Privacy Policy":"Privacy Policy",
+    "Rate Us":"Rate Us",
+    "Playlist Detail":"Playlist Detail",
+    "Add Music to Playlist":"Add Music to Playlist",
+    "Delete Music File":"Delete Music File",
+    "Songs":"Songs",
+    "Select":"Select",
+    "Music added to playlist":"Music added to playlist"
+   
 }
