--- a/assets/lang/fr.json
+++ b/assets/lang/fr.json
@@ -25,5 +25,9 @@
     "Delete Music File": "Supprimer le fichier musical",
     "Songs": "Chansons",
     "Select": "Sélectionner",
-    "Music added to playlist": "Musique ajoutée à la playlist"
+    "Music added to playlist": "Musique ajoutée à la playlist",
+    "Playlist name": "Nom de la playlist",
+    "Create": "Créer",
+    "Playlist": "Playlist",
+    "Are you sure you want to delete this music file from the playlist?": "Êtes-vous sûr de vouloir supprimer ce fichier musical de la playlist ?"
 }
