--- a/assets/lang/tr.json
+++ b/assets/lang/tr.json
@@ -25,5 +25,9 @@
     "Delete Music File": "Müzik Dosyasını Sil",
     "Songs": "Şarkılar",
     "Select": "Seç",
-    "Music added to playlist": "Müzik çalma listesine eklendi"
+    "Music added to playlist": "Müzik çalma listesine eklendi",
+    "Playlist name": "Çalma Listesi Adı",
+    "Create": "Oluştur",
+    "Playlist": "Çalma Listesi",
+    "Are you sure you want to delete this music file from the playlist?": "Bu müzik dosyasını çalma listesinden silmek istediğinizden emin misiniz?"
 }
