--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -29,5 +29,11 @@
     "Playlist name": "Nombre de la Lista",
     "Create": "Crear",
     "Playlist": "Lista",
-    "Are you sure you want to delete this music file from the playlist?": "¿Estás seguro de que quieres eliminar este archivo de música de la lista de reproducción?"
+    "Are you sure you want to delete this music file from the playlist?": "¿Estás seguro de que quieres eliminar este archivo de música de la lista de reproducción?",
+    "You are premium": "Eres premium",
+    "Enjoy your premium benefits": "Disfruta de los beneficios de premium",
+    "Press the Add Music Button to Add Music": "Presiona el botón Agregar música para agregar música",
+    "Continue": "Continuar",
+    "Select the Music File You Want to Add": "Selecciona el archivo de música que quieres agregar",
+    "And Enjoy Music without the Internet": "Y disfruta de la música sin internet"
 }
