--- a/assets/lang/de.json
+++ b/assets/lang/de.json
@@ -29,5 +29,11 @@
     "Playlist name": "Wiedergabelistenname",
     "Create": "Erstellen",
     "Playlist": "Wiedergabeliste",
-    "Are you sure you want to delete this music file from the playlist?": "Möchten Sie diese Musikdatei wirklich aus der Wiedergabeliste löschen?"
+    "Are you sure you want to delete this music file from the playlist?": "Möchten Sie diese Musikdatei wirklich aus der Wiedergabeliste löschen?",
+    "You are premium": "Sie sind Premium-Mitglied",
+    "Enjoy your premium benefits": "Genießen Sie Ihre Premium-Vorteile",
+    "Press the Add Music Button to Add Music": "Musik hinzufügen mit der Schaltfläche Musik hinzufügen",
+    "Continue": "Weitermachen",
+    "Select the Music File You Want to Add": "Wählen Sie die Musikdatei aus, die Sie hinzufügen möchten",
+    "And Enjoy Music without the Internet": "Und Musik ohne das Internet genießen"
 }
