--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -29,5 +29,13 @@
     "Playlist name":"Playlist name",
     "Create":"Create",
     "Playlist":"Playlist",
-    "Are you sure you want to delete this music file from the playlist?":"Are you sure you want to delete this music file from the playlist?"
+    "Are you sure you want to delete this music file from the playlist?":"Are you sure you want to delete this music file from the playlist?",
+    "You are premium":"You are premium",
+    "Enjoy your premium benefits":"Enjoy your premium benefits",
+    "Press the Add Music Button to Add Music":"Press the Add Music Button to Add Music",
+    "Continue":"Continue",
+    "Select the Music File You Want to Add":"Select the Music File You Want to Add",
+    "And Enjoy Music without the Internet":"And Enjoy Music without the Internet"
+
+    
 }
