--- a/assets/lang/fr.json
+++ b/assets/lang/fr.json
@@ -29,5 +29,11 @@
     "Playlist name": "Nom de la playlist",
     "Create": "Créer",
     "Playlist": "Playlist",
-    "Are you sure you want to delete this music file from the playlist?": "Êtes-vous sûr de vouloir supprimer ce fichier musical de la playlist ?"
+    "Are you sure you want to delete this music file from the playlist?": "Êtes-vous sûr de vouloir supprimer ce fichier musical de la playlist ?",
+    "You are premium": "Vous êtes premium",
+    "Enjoy your premium benefits": "Profitez de vos avantages premium",
+    "Press the Add Music Button to Add Music": "Ajouter de la musique avec le bouton Ajouter de la musique",
+    "Continue": "Continuer",
+    "Select the Music File You Want to Add": "Sélectionnez le fichier musical que vous voulez ajouter",
+    "And Enjoy Music without the Internet": "Et profitez de la musique sans internet"
 }
