--- a/assets/lang/it.json
+++ b/assets/lang/it.json
@@ -29,5 +29,11 @@
     "Playlist name": "Nome della Playlist",
     "Create": "Crea",
     "Playlist": "Playlist",
-    "Are you sure you want to delete this music file from the playlist?": "Sei sicuro di voler eliminare questo file musicale dalla playlist?"
+    "Are you sure you want to delete this music file from the playlist?": "Sei sicuro di voler eliminare questo file musicale dalla playlist?",
+    "You are premium": "Sei premium",
+    "Enjoy your premium benefits": "Goditi i benefici del tuo abbonamento premium",
+    "Press the Add Music Button to Add Music": "Aggiungi musica con il pulsante Aggiungi musica",
+    "Continue": "Continua",
+    "Select the Music File You Want to Add": "Seleziona il file musicale che vuoi aggiungere",
+    "And Enjoy Music without the Internet": "E disfrutta della musica senza internet"
 }
