--- a/assets/lang/pt.json
+++ b/assets/lang/pt.json
@@ -29,5 +29,11 @@
     "Playlist name": "Nome da Lista",
     "Create": "Criar",
     "Playlist": "Lista",
-    "Are you sure you want to delete this music file from the playlist?": "Tem certeza de que deseja excluir este arquivo de música da lista de reprodução?"
+    "Are you sure you want to delete this music file from the playlist?": "Tem certeza de que deseja excluir este arquivo de música da lista de reprodução?",
+    "You are premium": "Você é premium",
+    "Enjoy your premium benefits": "Aproveite os benefícios do seu plano premium",
+    "Press the Add Music Button to Add Music": "Presione o botão Adicionar música para adicionar música",
+    "Continue": "Continuar",
+    "Select the Music File You Want to Add": "Selecione o arquivo de música que você deseja adicionar",
+    "And Enjoy Music without the Internet": "E desfrute da música sem a internet"
 }
