--- a/assets/lang/tr.json
+++ b/assets/lang/tr.json
@@ -29,5 +29,11 @@
     "Playlist name": "Çalma Listesi Adı",
     "Create": "Oluştur",
     "Playlist": "Çalma Listesi",
-    "Are you sure you want to delete this music file from the playlist?": "Bu müzik dosyasını çalma listesinden silmek istediğinizden emin misiniz?"
+    "Are you sure you want to delete this music file from the playlist?": "Bu müzik dosyasını çalma listesinden silmek istediğinizden emin misiniz?",
+    "You are premium": "Premium üyesiniz",
+    "Enjoy your premium benefits": "Premium avantajlarınızı keyifli bir şekilde kullanın",
+    "Press the Add Music Button to Add Music": "Müzik Ekle butonuna basın",
+    "Continue": "Devam Et",
+    "Select the Music File You Want to Add": "Eklemek istediğiniz müzik dosyasını seçin",
+    "And Enjoy Music without the Internet": "İnternet olmadan müzik dinlemek için devam edin"
 }
